# graph-context

./: .gitignore  pyproject.toml
research/: 00-sota-survey.md  01-opencypher-and-graph-dbs.md  02-architecture-draft.md
src/graph_context/: __init__.py  cli.py  config.py  mcp_server.py  watcher.py
src/graph_context/context/: assembler.py  formatter.py  ranker.py
src/graph_context/indexer/: git_ops.py  history.py  plans.py  structure.py
src/graph_context/indexer/extractors/: base.py  python.py  typescript.py
src/graph_context/plans/: manager.py
src/graph_context/storage/: schema.py  store.py
src/graph_context/templates/: CLAUDE.md  mcp.json
tests/test_context/: test_context_generator.py
tests/test_indexer/: test_extractors.py
tests/test_mcp/: test_mcp_tools.py
tests/test_plans/: test_plan_manager.py
